data-git/worldmodel/worldmodel/test/requirement-test-negative-preconditions.p.pddl.Maxplan.stderr

requirement-test-negative-preconditions.d.pddl: syntax error in line 3, ':NEGATIVE-PRECONDITIONS':
requirement %s not supported by this IPP version :NEGATIVE-PRECONDITIONS
